完成 Java 基础面试题第 12 题并修复 SVG 显示问题
新增内容：
- 第 12 题：字符串常量池是什么？
  * JDK 6 vs JDK 7+ 位置演变图
  * 常量池工作机制流程图
  * 进入常量池的三种方式
  * 字面量 vs new 方式对比
  * JVM 参数配置说明

修复问题：
- 修复第 10 题性能对比图 SVG 对齐问题
- 修复第 11 题工作流程图箭头指向问题
- 调整文字和矩形层级避免遮挡

优化：
- 所有 SVG 图表布局优化
- 代码示例精简化
- 内容结构更清晰

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>